data/derived/comb/progs/unify/prog1377.ml.out
Characters 106-109:
  else additivePersistence (x);;
                           ^^^
Error: This expression has type int but an expression was expected of type
         int list
